<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PrincipalActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewNomeCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nomeVet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTutor" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text|textCapWords"
            app:layout_constraintStart_toStartOf="@+id/textViewNomeCompleto"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeCompleto" />

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="150dp"
            android:layout_height="130dp"
            app:layout_constraintStart_toStartOf="@+id/textViewGenero"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenero">

            <RadioButton
                android:id="@+id/radioButtonNaoDizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefiro_nao_dizer" />

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/radioButtonFeminino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feminino" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/genero"
            app:layout_constraintStart_toStartOf="@+id/spinnerSexoAnimal"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSexoAnimal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/especie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDataNascimento" />

        <CheckBox
            android:id="@+id/checkBoxGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gato"
            app:layout_constraintStart_toStartOf="@+id/checkBoxCachorro"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCachorro" />

        <CheckBox
            android:id="@+id/checkBoxCachorro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cachorro"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textViewTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:text="@string/programaVacinacaoPet"
            app:layout_constraintBottom_toTopOf="@+id/editTextNome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            app:layout_constraintStart_toStartOf="@+id/editTextNome"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="@+id/editTextNome"
            app:layout_constraintTop_toBottomOf="@+id/textViewTelefone" />

        <TextView
            android:id="@+id/textViewPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/dados_do_pet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

        <TextView
            android:id="@+id/textViewNomePet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_pet"
            app:layout_constraintStart_toStartOf="@+id/editTextTelefone"
            app:layout_constraintTop_toBottomOf="@+id/textViewPet" />

        <EditText
            android:id="@+id/editTextNomePet"
            android:layout_width="188dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="text|textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomePet" />

        <TextView
            android:id="@+id/textViewRaca"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="144dp"
            android:text="@string/raca"
            app:layout_constraintStart_toEndOf="@+id/textViewNomePet"
            app:layout_constraintTop_toBottomOf="@+id/textViewPet" />

        <TextView
            android:id="@+id/textViewDataNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dataVacinacao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomePet" />

        <EditText
            android:id="@+id/editTextRacaPet"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text|textCapWords"
            app:layout_constraintStart_toStartOf="@+id/textViewRaca"
            app:layout_constraintTop_toBottomOf="@+id/textViewRaca" />

        <EditText
            android:id="@+id/editTextDataNascimento"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="datetime|date"
            app:layout_constraintStart_toStartOf="@+id/textViewDataNascimento"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataNascimento" />

        <TextView
            android:id="@+id/textViewSexoAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sexo_animal"
            app:layout_constraintStart_toStartOf="@+id/editTextRacaPet"
            app:layout_constraintTop_toBottomOf="@+id/editTextRacaPet" />

        <Spinner
            android:id="@+id/spinnerSexoAnimal"
            android:layout_width="154dp"
            android:layout_height="39dp"
            android:layout_marginTop="12dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewSexoAnimal"
            app:layout_constraintTop_toBottomOf="@+id/textViewSexoAnimal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

