<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome_vacina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValorNome"
        android:layout_width="205dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textViewNome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRendaMensal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/valor_vacina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <TextView
        android:id="@+id/textViewValorRendaMensal"
        android:layout_width="149dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@+id/textViewRendaMensal"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <TextView
        android:id="@+id/textViewTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tipo_raca"
        app:layout_constraintStart_toEndOf="@+id/textViewValorRendaMensal"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textViewValorTipo"
        android:layout_width="112dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toEndOf="@+id/textViewTipo"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorNome" />

</androidx.constraintlayout.widget.ConstraintLayout>